--- a/style.css
+++ b/style.css
@@ -33,6 +33,9 @@
 * {
     background-color: var(--light-navy);
     font-family: var(--font-mono) ;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 body{
@@ -52,15 +55,15 @@ a {
 
 header ol{
     display: flex ;
-    justify-content: flex-end;
+    justify-content: center;
     list-style: none;
 
 }
 
-header .resume {
+.resume {
     color: var(--green);
-    border: 1px solid var(--green);
-    border-radius: var(--border-radius);
+    /*border: 1px solid var(--green);
+    border-radius: var(--border-radius);*/
 }
 
 header a:hover{
@@ -72,15 +75,15 @@ header{
     z-index: 11;
     width: 100%;
     height: var(--nav-height);
-    padding: 0px 50px;
-    justify-content: space-between;
-    margin-right: 20px;
-    overflow: hidden;
+    margin: 20px 20px;
+    padding: 20px 50px;
+    
 }
 
 @media(max-width: 1080px){
     header{
         padding: 0px 40px;
+        margin-right:50px ;
     }
 }
 
@@ -88,4 +91,64 @@ header{
     header{
         padding: 0px 25px;
     }
+}
+
+header .logo{
+    width: 20%;
+}
+
+/*             Intro section                */
+@media(max-width:1080px){
+    main{
+        padding: 200px 100px;
+    }
+}
+
+.home{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: flex-start;
+    min-height: 100vh;
+    height: 100vh;
+    padding: 0px;
+}
+
+.home h1{
+    margin: 0px 0px 30px 4px;
+    color: var(--green);
+    font-family: var(--font-mono);
+    font-size: clamp(var(--fz-sm), 5vw, var(--fz-md));
+    font-weight: 400;
+    line-height: 1.1;
+}
+
+section{
+    margin: 0px auto;
+    max-width: 1000px;
+
+
+}
+
+.home h2{
+    color: var(--light-slate);
+    font-size: var(--fz-heading);
+    line-height: 1.1;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+
+h1, h2, h3,h4,h5,h6{
+    margin: 0px Opx 10px;
+    font-weight: 600;
+    line-height: 1.1;
+}
+
+p{
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    marg
 }
